Change engine parameter to simulate

--- a/Assets/Resources/Settings/Config.ini
+++ b/Assets/Resources/Settings/Config.ini
@@ -10,7 +10,7 @@ interpolate = false
 [batchMode]
 endBehaviour = goToLobby
 [engine]
-mode = visualise
+mode = simulate
 timeScale = 1
 [delays]
 recordDelay = 1
