Add canvas for latency test, fix language setting, include wav audio

--- a/Assets/Resources/Settings/Config.ini
+++ b/Assets/Resources/Settings/Config.ini
@@ -8,7 +8,7 @@ queryString = /check?id={0}&uid={1}
 [smoothing]
 interpolate = false
 [batchMode]
-endBehaviour = goToLobby
+endBehaviour = close
 [engine]
 mode = simulate
 timeScale = 1
