--- a/Assets/Resources/Settings/Config.ini
+++ b/Assets/Resources/Settings/Config.ini
@@ -6,11 +6,11 @@ main = http://192.168.1.3:3000
 fallback = http://192.168.1.4:3000
 queryString = /check?id={0}&uid={1}
 [smoothing]
-interpolate = true
+interpolate = false
 [batchMode]
 endBehaviour = close
 [engine]
-mode = simulate
+mode = visualise
 timeScale = 1
 [delays]
 recordDelay = 1
